--- a/index.html
+++ b/index.html
@@ -1,18 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Game Portal</title>
-
-    <link rel="stylesheet" href="scss/styles.css">
+    <link rel="stylesheet" href="./css/fontawesome-all.min.css">
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
+
 <body>
-    <h1>Deneme başlığı</h1>
+    <!-- header -->
+    <header class="header-main bg-dark">
+
+        <!-- header top -->
+        <div class="top-header">
+            <div class="container">
+                <div class="logo">
+                    <h1>Game</h1>
+                </div>
+
+                <ul class="top-social-menu">
+                    <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                    <li><a href="#"><i class="fab fa-facebook"></i></a></li>
+                    <li><a href="#"><i class="fab fa-youtube"></i></a></li>
+                    <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+                    <li><a href="#"><i class="fab fa-google"></i></a></li>
+                    <li><a href="#"><i class="fab fa-amazon"></i></a></li>
+                </ul>
+
+                <div class="login-area">
+                    <a href="#" class="btn btn-primary">Login <span><i class="fas fa-sign-in-alt"></i></span></a>
+                    <a href="#" class="btn ml-2">Sign Up <span><i class="fas fa-sign-user-plus"></i></span></a>
+                </div>
+            </div>
+        </div>
+
+        <!-- header nav menu -->
+            <div class="container">
+                <div class="nav-header">
+                    <nav class="navbar">
+                        <ul class="nav-list">
+                            <li class="nav-item"><a href="#">Home</a></li>
+                            <li class="nav-item"><a href="#">Games</a>
+                                <i class="fas fa-chevron-down"></i>
+                                <ul class="dropdown">
+                                    <li><a href="#">Game I</a></li>
+                                    <li><a href="#">Game II</a></li>
+                                </ul>
+                            </li>
+                            <li class="nav-item"><a href="#">News</a></li>
+                            <li class="nav-item"><a href="#">Blog</a>
+                                <i class="fas fa-chevron-down"></i>
+                                <ul class="dropdown">
+                                    <li><a href="">Blog I</a></li>
+                                    <li><a href="">Blog II</a></li>
+                                </ul>
+                            </li>
+                            <li class="nav-item"><a href="">Software</a></li>
+                            <li class="nav-item"><a href="">Contact</a></li>
+                        </ul>
+                        <div class="search-area">
+                            <form action="">
+                                <input type="search" placeholder="Search">
+                                <button class="btn" type="submit"><i class="fas fa-search"></i></button>
+                            </form>
+                        </div>
+                    </nav>
+                </div>
+            </div>      
+
+    </header>
 
 
 
     <script src="js/index.js"></script>
 </body>
+
 </html>
